--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
+    "blueimp-load-image": "^2.10.0",
     "dexie": "^1.3.6",
-    "sharp": "0.11.4",
     "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.0.6",
     "imap": "^0.8.17",
@@ -29,6 +29,7 @@
     "nodemailer": "^2.7.0",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^1.12.0",
+    "sharp": "0.11.4",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   }
