offline, practices, header and files * Offline tournaments using syncing through json download * fixed practices map image to use new fileupload * made fileupload more general with addToQueue function * redesigned header to include more icons and moved search to dialog

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "handlebars": "^4.0.6",
     "imap": "^0.8.17",
     "jquery": "^2.2.4",
+    "localforage": "^1.4.3",
     "meteor-node-stubs": "^0.2.3",
     "nodemailer": "^2.7.0",
     "quoted-printable": "^1.0.0",
