--- a/packages/tweeter/package.json
+++ b/packages/tweeter/package.json
@@ -2,11 +2,20 @@
   "name": "tweeter",
   "version": "1.0.0",
   "description": "",
-  "main": "tweeter.js",
+  "main": "lib/tweeter.js",
   "scripts": {
+    "prepublish": "babel src/ --out-dir lib/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel-runtime": "^5.8.25",
+    "meteor-node-stubs": "^0.2.3"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.7.5"
+  }
 }
