--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "handlebars": "^4.0.6",
     "imap": "^0.8.17",
     "jquery": "^3.1.1",
-    "localforage": "^1.4.3",
+    "localforage": "^1.5.0",
     "meteor-node-stubs": "^0.2.3",
+    "mongodb": "^2.2.24",
     "nodemailer": "^2.7.0",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^1.12.0",
-    "sharp": "0.11.4",
+    "sharp": "^0.17.2",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
