--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "mongodb": "^2.2.24",
     "nodemailer": "^2.7.0",
     "quoted-printable": "^1.0.0",
+    "react": "^15.5.4",
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-dom": "^15.5.4",
     "sanitize-html": "^1.12.0",
     "sharp": "^0.17.2",
     "stream-to-buffer": "^0.1.0",
