--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.0.6",
     "imap": "^0.8.17",
-    "jquery": "^3.1.1",
     "localforage": "^1.5.0",
     "meteor-node-stubs": "^0.2.3",
     "mongodb": "^2.2.24",
@@ -39,6 +38,8 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-meteor": "^4.0.1"
   }
 }
