updated dev environment, fixed video malformed bug

--- a/.eslintrc
+++ b/.eslintrc
@@ -57,5 +57,6 @@
         "node": true,
         "browser": true
     },
-    "extends": ["plugin:meteor/recommended"]
+    "extends": "@meteorjs/eslint-config-meteor"
+    //"extends": ["plugin:meteor/recommended"]
 }
