--- a/package.json
+++ b/package.json
@@ -28,18 +28,20 @@
     "mongodb": "^2.2.24",
     "nodemailer": "^2.7.0",
     "quoted-printable": "^1.0.0",
-    "react": "^15.5.4",
-    "react-addons-pure-render-mixin": "^15.5.2",
-    "react-dom": "^15.5.4",
     "sanitize-html": "^1.12.0",
     "sharp": "^0.17.2",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
   "devDependencies": {
+    "@meteorjs/eslint-config-meteor": "^1.0.5",
+    "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-meteor": "^4.0.1"
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^7.0.1"
   }
 }
