--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.18.0",
+    "base64-stream": "^0.1.3",
     "bcrypt": "^0.8.7",
     "blueimp-load-image": "^2.10.0",
     "gridfs-locking-stream": "^1.1.1",
