--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "lars@larswolter.de:/home/lars/gitrepos/ultisite"
+    "url": "https://github.com/larswolter/ultisite.git"
   },
   "author": "Lars Wolter",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.38",
     "addressparser": "^1.0.1",
-    "babel-runtime": "^6.18.0",
     "base64-stream": "^0.1.3",
     "bcrypt": "^1.0.3",
     "blueimp-load-image": "^2.10.0",
+    "exceljs": "^0.8.2",
     "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.0.6",
     "imap": "^0.8.17",
     "localforage": "^1.5.0",
     "meteor-node-stubs": "^0.2.3",
     "mongodb": "^2.2.24",
-    "nodemailer": "^4.4.0",
+    "nodemailer": "^4.4.1",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^1.12.0",
     "sharp": "^0.17.3",
