--- a/.eslintrc
+++ b/.eslintrc
@@ -1,62 +1,96 @@
 {
-    "globals": {
-        "_": true,
-        "UltiSite": true,
-        "Meteor": true,
-        "ReactiveVar": true,
-        "Template": true,
-        "Session": true,
-        "$": true,
-        "FS": true,
-        "FlowRouter": true,
-        "Tracker": true,
-        "HTTP": true,
-        "WebApp":true,
-        "Npm":true,
-        "Assets":true,
-        "moment":true,
-        "Roles":true,
-        "Accounts":true
-    },
-    "rules": {
-        "indent": [
-            1,
-            2
-        ],
-        "quotes": [
-            0,
-            "single"
-        ],
-        "linebreak-style": [
-            0
-        ],
-        "semi": [
-            2,
-            "always"
-        ],
-        "no-undef": [
-          2
-        ],
-        "no-unused-vars": [
-          1
-        ],
-        "no-console": [
-          0
-        ],
-        "meteor/eventmap-params":[
-          0
+  "env": {
+    "meteor": true,
+    "node": true,
+    "browser": true
+  },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
+  "plugins": [
+    "meteor"
+  ],
+  "extends": [
+    "airbnb-base",
+    "plugin:meteor/recommended"
+  ],
+  "rules": {
+    "meteor/eventmap-params": [
+      2,
+      {
+        "templateInstanceParamName": "tmpl",
+        "eventParamName": "evt"
+      }
+    ],
+    "import/no-unresolved": [
+      2,
+      {
+        "ignore": [
+          "^meteor/"
         ]
-    },
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "plugins": ["meteor"],
-    "env": {
-        "es6": true,
-        "node": true,
-        "browser": true
-    },
-    "extends": "@meteorjs/eslint-config-meteor"
-    //"extends": ["plugin:meteor/recommended"]
+      }
+    ],
+    "indent": [
+      "warn",
+      2
+    ],
+    "no-unused-vars": 1,
+    "no-console": 0,
+    "no-underscore-dangle": 0,
+    "consistent-return": 0,
+    "linebreak-style": 0,
+    "quote-props": 0,
+    "func-names": 0,
+    "max-len": [
+      "warn",
+      {
+        "code": 120,
+        "ignoreComments": true
+      }
+    ],
+    "no-param-reassign": 0,
+    "no-unused-expressions": 0,
+    "arrow-body-style": 0,
+    "new-cap": 0,
+    "prefer-arrow-callback": 0,
+    "prefer-template": 0,
+    "no-mixed-operators": [
+      "warn"
+    ],
+    "no-else-return": 0,
+    "no-use-before-define": [
+      "warn"
+    ],
+    "no-shadow": [
+      "warn"
+    ],
+    "curly": [
+      "warn"
+    ],
+    "object-curly-spacing": [
+      "warn"
+    ],
+    "keyword-spacing": [
+      "warn"
+    ],
+    "comma-dangle": [
+      "warn",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "ignore"
+      }
+    ]
+  },
+  "globals": {
+    "UltiSite": false,
+  }
 }
