--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.38",
     "addressparser": "^1.0.1",
+    "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.3",
     "bcrypt": "^1.0.3",
     "blueimp-load-image": "^2.10.0",
