--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Lars Wolter",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.38",
+    "@babel/runtime": "^7.0.0-beta.42",
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.3",
@@ -33,6 +33,7 @@
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^1.12.0",
     "sharp": "^0.17.3",
+    "simpl-schema": "^1.4.2",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
