--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^7.0.1",
-    "nightmare": "^2.10.0"
+    "nightmare": "^2.10.0",
+    "workbox-cli": "^3.2.0"
   }
 }
