--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
   "author": "Lars Wolter",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.42",
+    "@babel/runtime": "^7.0.0-beta.49",
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.3",
     "bcrypt": "^1.0.3",
-    "blueimp-load-image": "^2.10.0",
-    "exceljs": "^0.8.2",
+    "blueimp-load-image": "^2.19.0",
+    "exceljs": "^0.8.5",
     "gridfs-locking-stream": "^1.1.1",
-    "handlebars": "^4.0.6",
+    "handlebars": "^4.0.11",
     "imap": "^0.8.17",
-    "localforage": "^1.5.0",
+    "localforage": "^1.7.1",
     "meteor-node-stubs": "^0.2.3",
-    "mongodb": "^2.2.24",
-    "nodemailer": "^4.4.1",
+    "mongodb": "^2.2.35",
+    "nodemailer": "^4.6.5",
     "quoted-printable": "^1.0.0",
-    "sanitize-html": "^1.12.0",
+    "sanitize-html": "^1.18.2",
     "sharp": "^0.17.3",
-    "simpl-schema": "^1.4.2",
+    "simpl-schema": "^1.5.0",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
@@ -43,13 +43,11 @@
     "casperjs": "^1.1.4",
     "denodeify": "^1.2.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-meteor": "^0.4.0",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^7.0.1",
-    "nightmare": "^2.10.0",
-    "workbox-cli": "^3.2.0"
+    "eslint-plugin-meteor": "^4.2.2",
+    "eslint-plugin-react": "^7.8.2"
   }
 }
