--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Lars Wolter",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.1.2",
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.3",
