--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.5",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "^3.0.3",
     "blueimp-load-image": "^2.20.1",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
+    "cron": "^1.6.0",
     "exceljs": "^1.6.3",
     "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.0.12",
@@ -35,7 +36,7 @@
     "nodemailer": "^4.7.0",
     "popper.js": "^1.14.6",
     "quoted-printable": "^1.0.0",
-    "sanitize-html": "^1.19.2",
+    "sanitize-html": "^1.20.0",
     "sharp": "^0.17.3",
     "simpl-schema": "^1.5.3",
     "stream-to-buffer": "^0.1.0",
@@ -52,7 +53,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-meteor": "^4.2.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.12.3",
     "less2sass": "^1.0.3"
   }
 }
