--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-meteor": "^4.2.2",
     "eslint-plugin-react": "^7.12.3",
-    "less2sass": "^1.0.3"
+    "jest": "^24.3.0",
+    "less2sass": "^1.0.3",
+    "workbox-cli": "^4.0.0"
   }
 }
