--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   "author": "Lars Wolter",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "^7.4.3",
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.5",
-    "bcrypt": "^3.0.3",
+    "bcrypt": "^3.0.5",
     "blueimp-load-image": "^2.20.1",
     "bootstrap": "^4.3.1",
-    "cron": "^1.6.0",
-    "exceljs": "^1.6.3",
+    "core-js": "^3.0.0",
+    "cron": "^1.7.0",
+    "exceljs": "^1.9.0",
     "gridfs-locking-stream": "^1.1.1",
-    "handlebars": "^4.1.0",
+    "handlebars": "^4.1.1",
     "imap": "^0.8.17",
     "jquery": "^3.3.1",
     "localforage": "^1.7.3",
@@ -35,11 +36,11 @@
     "meteor-node-stubs": "^0.4.1",
     "mongodb": "^2.2.36",
     "nodemailer": "^4.7.0",
-    "popper.js": "^1.14.6",
+    "popper.js": "^1.15.0",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^1.20.0",
     "sharp": "^0.17.3",
-    "simpl-schema": "^1.5.3",
+    "simpl-schema": "^1.5.5",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
@@ -51,12 +52,12 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-meteor": "^0.4.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-meteor": "^4.2.2",
-    "eslint-plugin-react": "^7.12.3",
-    "jest": "^24.3.0",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.7.1",
     "less2sass": "^1.0.3",
-    "workbox-cli": "^4.0.0"
+    "workbox-cli": "^4.2.0"
   }
 }
