updated dependencies including dev

--- a/package.json
+++ b/package.json
@@ -21,42 +21,43 @@
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^0.1.5",
-    "bcrypt": "^3.0.5",
-    "blueimp-load-image": "^2.20.1",
+    "bcrypt": "^3.0.7",
+    "blueimp-load-image": "^2.24.0",
     "bootstrap": "^4.3.1",
-    "core-js": "^3.0.0",
-    "cron": "^1.7.0",
-    "exceljs": "^1.9.0",
+    "core-js": "^3.4.1",
+    "cron": "^1.7.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "exceljs": "^1.15.0",
     "gridfs-locking-stream": "^1.1.1",
-    "handlebars": "^4.5.2",
+    "handlebars": "^4.5.3",
     "imap": "^0.8.17",
     "jquery": "^3.4.1",
     "localforage": "^1.7.3",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "meteor-node-stubs": "^1.0.0",
-    "mongodb": "^3.3.3",
+    "mongodb": "^3.3.4",
     "nodemailer": "^4.7.0",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.0",
     "quoted-printable": "^1.0.0",
-    "sanitize-html": "^1.20.0",
+    "sanitize-html": "^1.20.1",
     "sharp": "^0.22.1",
-    "simpl-schema": "^1.5.5",
+    "simpl-schema": "^1.5.6",
     "stream-to-buffer": "^0.1.0",
     "wysiwyg.js": "^1.0.0"
   },
   "devDependencies": {
     "@meteorjs/eslint-config-meteor": "^1.0.5",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^10.0.3",
     "casperjs": "^1.1.4",
     "denodeify": "^1.2.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-import-resolver-meteor": "^0.4.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-meteor": "^4.2.2",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.7.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-meteor": "^6.0.0",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
     "less2sass": "^1.0.3",
     "workbox-cli": "^4.3.1"
   }
