--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "denodeify": "^1.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
