--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.1.0",
     "blueimp-load-image": "^5.16.0",
     "cron": "^1.8.2",
+    "dayjs": "^1.11.10",
     "exceljs": "^4.3.0",
     "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.7.7",
@@ -38,6 +39,7 @@
     "meteor-node-stubs": "^1.2.5",
     "mongodb": "^4.16.0",
     "nodemailer": "^6.9.3",
+    "ol": "^8.2.0",
     "popper.js": "^1.16.1",
     "quoted-printable": "^1.0.0",
     "react": "^18.2.0",
