--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-simple-wysiwyg": "^3.0.2",
     "recharts": "^2.12.3",
     "sanitize-html": "^2.10.0",
     "sharp": "^0.31.3",
