--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "ultisite",
   "version": "1.0.0",
   "description": "Ultimate Team Management",
-  "main": "client/ultisite.js",
+  "meteor": {
+    "mainModule": {
+      "client": "client/main.js",
+      "server": "server/main.js"
+    }
+  },
   "directories": {
     "test": "tests"
   },
@@ -32,7 +37,7 @@
     "jquery": "^3.7.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "meteor-node-stubs": "^1.2.10",
+    "meteor-node-stubs": "^1.2.12",
     "mongodb": "^4.16.0",
     "nodemailer": "^6.9.15",
     "popper.js": "^1.16.1",
@@ -44,18 +49,8 @@
     "wysiwyg.js": "^1.0.0"
   },
   "devDependencies": {
-    "@meteorjs/eslint-config-meteor": "^1.0.5",
-    "babel-eslint": "^10.1.0",
-    "denodeify": "^1.2.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-meteor": "^0.4.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-meteor": "^7.3.0",
-    "eslint-plugin-react": "^7.37.0",
-    "jest": "^29.5.0",
-    "workbox-cli": "^6.6.0"
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   }
 }
