--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Lars Wolter",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.26.9",
+    "@babel/runtime": "^7.27.1",
     "addressparser": "^1.0.1",
     "babel-runtime": "^6.26.0",
     "base64-stream": "^1.0.0",
@@ -37,13 +37,13 @@
     "jquery": "^3.7.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "meteor-node-stubs": "^1.2.12",
+    "meteor-node-stubs": "^1.2.17",
     "mongodb": "^4.17.2",
     "nodemailer": "^6.10.0",
     "popper.js": "^1.16.1",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^2.14.0",
-    "sharp": "^0.32.6",
+    "sharp": "^0.34.1",
     "simpl-schema": "^1.13.1",
     "workbox-window": "^6.6.0",
     "wysiwyg.js": "^1.0.0"
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "eslint": "^9.20.1",
-    "globals": "^15.15.0"
+    "globals": "^15.15.0",
+    "jscodeshift": "^17.1.2"
   }
 }
