--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Ultimate Team Management",
   "meteor": {
+    "modern": true,
     "mainModule": {
       "client": "client/main.js",
       "server": "server/main.js"
@@ -32,14 +33,12 @@
     "bootstrap": "^5.3.5",
     "cron": "^1.8.2",
     "exceljs": "^4.4.0",
-    "gridfs-locking-stream": "^1.1.1",
     "handlebars": "^4.7.7",
-    "imap": "^0.8.19",
     "jquery": "^3.7.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.2.17",
-    "mongodb": "^4.17.2",
+    "mongodb": "^6.17.0",
     "nodemailer": "^6.10.0",
     "ol": "^10.5.0",
     "popper.js": "^1.16.1",
