--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "jquery": "^3.7.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "meteor-node-stubs": "^1.2.17",
+    "meteor-node-stubs": "^1.2.22",
     "mongodb": "^6.17.0",
     "nodemailer": "^6.10.0",
-    "ol": "^10.5.0",
+    "ol": "^10.6.1",
     "popper.js": "^1.16.1",
     "quoted-printable": "^1.0.0",
     "sanitize-html": "^2.14.0",
-    "sharp": "^0.34.1",
+    "sharp": "^0.34.3",
     "simpl-schema": "^1.13.1",
     "workbox-window": "^6.6.0",
     "wysiwyg.js": "^1.0.0"
@@ -52,7 +52,6 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "eslint": "^9.20.1",
-    "globals": "^15.15.0",
-    "jscodeshift": "^17.1.2"
+    "globals": "^15.15.0"
   }
 }
